<?xml version="1.0" encoding="utf-8"?>
<!--Author: Phung Khanh Chi, Feng Li Ying-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="240dp"
        android:layout_height="125px"
        android:background="@drawable/home_page_button"
        android:ems="10"
        android:hint="@string/username"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintVertical_bias="0.521" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="240dp"
        android:layout_height="125px"
        android:background="@drawable/home_page_button"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/home_page_button"
        android:text="@string/login"
        android:textSize="55px"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/txtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/back"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="30dp"
        android:maxWidth="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:paddingLeft="10dp"-->
    <!--    android:paddingRight="10dp"-->
    <!--    android:paddingTop="10dp"-->
    <!--    android:paddingBottom="10dp" tools:context=".MainActivity">-->

    <!--    <TextView android:text="hello" android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content" />-->

    <!--    <ListView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:id="@+id/listView"-->
    <!--        android:layout_alignParentRight="true"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_alignParentLeft="true"-->
    <!--        android:layout_alignParentStart="true" />-->

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Get All"-->
    <!--        android:id="@+id/btnGetAll"-->
    <!--        android:layout_alignBottom="@+id/listView"-->
    <!--        android:layout_alignParentLeft="true"-->
    <!--        android:layout_alignParentStart="true" />-->

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Add Student"-->
    <!--        android:id="@+id/btnAdd"-->
    <!--        android:layout_alignBottom="@+id/listView"-->
    <!--        android:layout_toRightOf="@+id/btnGetAll"-->
    <!--        android:layout_toEndOf="@+id/btnGetAll" />-->
    <!--</RelativeLayout>-->